WIP on loading assets from manifest

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 this serves as *targeted* list of things i need to do, will break it down into manageable chunks so I don't become overwelmed
 
-1.  Write basic asset tool, needs to generate an XML file and save to disk or print to stdout, functions as a standalone bin
-2. The time has come for make!!!
+1.  Write basic asset tool, needs to generate an XML file and save to disk or print to stdout, functions as a standalone bin: Done
+2. The time has come for make!!!: Done for asset generation at least
+3. Integrate xml asset manifest for resources
+4. Is it time to start rolling "real" errors instead of all these dumbass strings?
