--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,10 @@ this serves as *targeted* list of things i need to do, will break it down into m
 2. The time has come for make!!!: Done for asset generation at least
 3. Integrate xml asset manifest for resources
 4. Is it time to start rolling "real" errors instead of all these dumbass strings?
+5.  Do I need a config?
+6. For optimization, investigate LTO
+7. Investigate default enums, see, ModelManger::load_model()
+        let model_type = match model_type_opt {
+            Some(model_type) => model_type,
+            None => ModelType::Wavefront,
+        };
