--- a/TODO.txt
+++ b/TODO.txt
@@ -7,7 +7,7 @@ this serves as *targeted* list of things i need to do, will break it down into m
     so I can uniformly use that instead, now I need to use it everywhere so I can change String to Error in a single place.
     I'm writing a bunch of: fn().map_err(|e| e.to_string())?; to return the Err(String) type, should probably figure out how to roll that
     into the RenderResult stuff instead
-5.  Do I need a config?
+5.  Do I need a config? got an assets_manifest and now a shader_dir, starting to need one
 6. For optimization, investigate LTO
 7. Investigate default enums, see, ModelManger::load_model()
         let model_type = match model_type_opt {
